# poker-vm

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierrc  BRIDGE_TESTING_TRACKING.md  COSMOS_INTEGRATION_SUMMARY.md  CUSTOM_POKER_SOLVER_SUMMARY.md  DOCKER.md  DOCKER_SETUP_SUMMARY.md  GIT_CHANGES_SUMMARY.md  GLOSSARY.md  LEAVE_COMMAND_VERIFICATION.md  LICENSE  Makefile  PLAYER_TIMEOUT_SYSTEM.md  README.md  REFACTOR_GUIDE.md  STRADBROKE_ISLAND.md  VITE7_UPGRADE_SUMMARY.md  WEBSOCKET_FIX_SUMMARY.md  WEBSOCKET_VERIFICATION.md  WORKING_CHECKLIST.md  bootnodes-dev.json  bootnodes.json  cosmos-integration.sh  deploy-bot-api.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  drop.sh  go.mod  install-docker.sh  install.sh  jsconfig.json  mongo-gamestate.sh  mongo.sh  nginx.sh  package.json  reddit.md  (+10 more)
.github/workflows/: deploy.yml  discord-notifications.yml  label-issues-on-merge.yml  main.yml  release-deploy.yml  release-sdk.yml  ui-build.yml  ui-test.yml
bot/: .env  main.py  requirements.txt
bot/api/: .env.example  Makefile  README.md  api.service  go.mod  go.sum  logger.go  main.go
bot/dashboard/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
bot/python/: .env.example  install.sh  main.py  setup.sh  table.py
bot/ts/: .env.example  BaseBot.ts  CheckBot.ts  ClaudBot.ts  RaiseOrCallBot.ts  RandomBot.ts  index.ts  interfaces.ts  mongoConnection.ts  package.json
cli/: index.js  package.json  tsconfig.json
cli/src/: index.ts
client/: index.js  package.json
contracts/: .env.example  .gitignore  README.md  constructor-args.js  hardhat.config.ts  package.json
contracts/contracts/: Bridge.sol  CosmosBridge.sol  Deposit.sol  IBridge.sol  IOracle.sol  IValidator.sol  MockToken.sol  (+9 more)
contracts_foundry/: package.json
cosmos/: README.md  config.yaml  cosmos-integration.sh  setup_poker_chain.sh
cosmosexplorer/: COSMOS_EXPLORER_CHECKLIST.md  package-lock.json  package.json
data/: docker-compose.yml  nodes.txt
desktop/: .gitignore  README.md  electron-builder.yml  main.js  package.json
docs/: B52-POKER-ECONOMICS.md  B52-TOKEN.md  B52-TOKENOMICS.md  CVE-2025-55182-RESOLUTION-SUMMARY.md  SECURITY-CVE-2025-55182.md  hand-history-json-export.md  poker-solver.md  shared-secret-analysis.md  stradbroke-island.md
documents/: POKER_SOLVER_IMPLEMENTATION.md  TABLE_NETWORK_INTEGRATION_TEST.md  VERIFICATION_COMPLETE.md  saf.md
explorer/: .env  .env.example  eslint.config.js  index.html  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
explorer_api/: .env.example  .gitignore  docker-compose.local.yml  docker-compose.yaml  package.json
explorer_frontend/: package-lock.json  package.json  tsconfig.json
faucet/: .env.example  .env.local  .gitignore  README.md  package.json
game/: README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.json
indexer/: go.mod
js/: package.json
js_source/: index.js
nginx/: default
proxy/: Makefile  docker-compose.yml
pvm/: docker-compose.yml  dockerise.sh
pvm/haskell/: .gitignore  LICENSE  LINKEDIN_ARTICLE.md  README.md  texas-holdem.cabal
pvm/haskell/app/: Example.hs  Main.hs  PhhRunner.hs
pvm/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pvm/haskell/dist-newstyle/packagedb/ghc-9.12.2/: texas-holdem-0.1.0.0-inplace.conf
pvm/haskell/src/: TexasHoldem.hs
pvm/haskell/src/TexasHoldem/: Action.hs  BetManager.hs  Card.hs  DealerManager.hs  Deck.hs  Evaluation.hs  GameState.hs  Hand.hs  Phh.hs  Player.hs  Pot.hs  Round.hs
pvm/haskell/src/TexasHoldem/Phh/: Parser.hs  Types.hs
pvm/haskell/test/: Main.hs
scripts/: check-react-cve-2025-55182.sh  client.js  shuffle-demo.py  sign.js  test.js  test.sh
sdk/: .gitignore  .last_backup  .npmignore  CLAUDE.md  IClient.ts  LINTING_SETUP.md  PROTO_GENERATION.md  PROTO_REGENERATION.md  README.md  RELEASE.md  SIGNING_CLIENT.md  TYPE_DUPLICATION_ANALYSIS.md  TYPE_REFACTORING_SUMMARY.md  WALLET_UTILS.md  client.ts  eslint.config.js  package-lock.json  package.json  regenerate-proto-types.sh  rollup.config.js  signingClient.ts  smoke-test.js  test.ts  tsconfig.json  tsup.config.ts  update-dependencies.sh
telegram-chat/: .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum
test_cvm/: README.md  eslint.config.mjs  package-lock.json  package.json  test-game.js  tsconfig.json
tests/: 00-purge-mempool.sh  000-new-table.sh  01-blinds-deal.sh  02-showdown.sh  03-showdown-shows.sh  blinds-deal.sh  blinds.sh  new-hand.sh  showdown-shows.sh  showdown.sh
tools/: client.js
ts_source/: holdem.ts  package.json
ui/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  GRID_LAYOUT_TESTING_CHECKLIST.md  PLAN-1586-dynamic-node-discovery.md  README.md  SDK_INTEGRATION_CHECKLIST.md  TOMS_CHECKLIST.md  TURN_NOTIFICATION_TESTING.md  app.yaml  electron.js  eslint.config.mjs  fix-localstorage.js  global.css  index.html  jest.config.js  package-lock.json  package.json  preload.js  tailwind.config.js  test-sdk.html  test-websocket.html  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
(+1429 files in other folders)
